# egui_inspector

./: Cargo.toml
egui_inspector_derive/: Cargo.toml
egui_inspector_derive/src/: lib.rs
src/: inspect_color.rs  inspect_numeric.rs  lib.rs
