[package]
name = "egui_inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui =  "0.21.0"
cg = { package = "cgmath", version = "0.18.0" }
egui_inspector_derive = { path = "egui_inspector_derive" }
syn = "1.0.109"